--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "devDependencies": {
         "@types/cors": "^2.8.17",
+        "@types/socket.io": "^3.0.2",
         "nodemon": "^3.1.9",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.2"
@@ -22,6 +23,7 @@
         "@types/express": "^5.0.0",
         "cors": "^2.8.5",
         "express": "^4.21.2",
-        "rimraf": "^6.0.1"
+        "rimraf": "^6.0.1",
+        "socket-io": "^1.0.0"
     }
 }
