--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router": "^7.1.1",
+        "socket.io-client": "^4.8.1",
         "zustand": "^5.0.2"
     },
     "devDependencies": {
