--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     },
     "dependencies": {
         "axios": "^1.7.9",
+        "js-cookie": "^3.0.5",
         "lodash": "^4.17.21",
+        "moment": "^2.30.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router": "^7.1.1",
@@ -20,6 +22,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
+        "@types/js-cookie": "^3.0.6",
         "@types/lodash": "^4.17.13",
         "@types/react": "^18.3.17",
         "@types/react-dom": "^18.3.5",
