--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "clean": "rimraf dist",
         "build": "npm run clean && npx tsc",
-        "start": "node dist/index.js",
-        "dev": "nodemon ./src/index.ts"
+        "start": "NODE_ENV=production node dist/index.js",
+        "dev": "NODE_ENV=development nodemon ./src/index.ts"
     },
     "keywords": [],
     "author": "",
@@ -22,7 +22,11 @@
     "dependencies": {
         "@types/express": "^5.0.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "express-rate-limit": "^7.5.0",
+        "helmet": "^8.0.0",
+        "mongoose": "^8.9.2",
         "rimraf": "^6.0.1",
         "socket-io": "^1.0.0",
         "uuid": "^11.0.3"
