--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
             context: ./api
         ports:
             - "8080:8080"
+        env_file:
+            - .env.production
         environment:
             - NODE_ENV=production
         networks:
