--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
         "react-dom": "^18.3.1",
         "react-router": "^7.1.1",
         "socket.io-client": "^4.8.1",
+        "swr": "^2.3.0",
         "zustand": "^5.0.2"
     },
     "devDependencies": {
