--- a/api/package.json
+++ b/api/package.json
@@ -6,29 +6,27 @@
     "scripts": {
         "clean": "rimraf dist",
         "build": "npm run clean && npx tsc",
-        "start": "NODE_ENV=production node dist/index.js",
-        "dev": "NODE_ENV=development nodemon ./src/index.ts"
+        "start": "node -r dotenv/config dist/index.js dotenv_config_path=.env.production",
+        "dev": "tsx watch -r dotenv/config src/index.ts dotenv_config_path=.env.development"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.0",
         "@types/socket.io": "^3.0.2",
-        "nodemon": "^3.1.9",
-        "ts-node": "^10.9.2",
         "typescript": "^5.7.2"
     },
     "dependencies": {
-        "@types/express": "^5.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
         "helmet": "^8.0.0",
         "mongoose": "^8.9.2",
+        "nanoid": "^3.3.4",
         "rimraf": "^6.0.1",
-        "socket-io": "^1.0.0",
-        "uuid": "^11.0.3"
+        "socket-io": "^1.0.0"
     }
 }
