--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
     api:
         build:
@@ -7,7 +5,7 @@ services:
         ports:
             - "8080:8080"
         env_file:
-            - .env.production
+            - ./api/.env.production
         depends_on:
             - mongo
         networks:
@@ -34,4 +32,4 @@ volumes:
 
 networks:
     mypokenetwork:
-        driver: bridge
+        driver: bridge # This is the default driver
