--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "axios": "^1.7.9",
+        "classnames": "^2.5.1",
         "js-cookie": "^3.0.5",
         "lodash": "^4.17.21",
         "moment": "^2.30.1",
