--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
         "helmet": "^8.0.0",
+        "ioredis": "^5.4.2",
         "mongoose": "^8.9.2",
         "nanoid": "^3.3.4",
         "rimraf": "^6.0.1",
