--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
             - ./api/.env.production
         depends_on:
             - mongo
+            - redis
         networks:
             - mypokenetwork
 
@@ -26,6 +27,13 @@ services:
         networks:
             - mypokenetwork
         command: ["mongod", "--quiet", "--logpath", "/dev/null"] # Suppresses logs
+
+    redis:
+        image: redis:alpine
+        ports:
+            - "6379:6379"
+        networks:
+            - mypokenetwork
 
 volumes:
     mongo_data:
