--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -6,7 +6,8 @@
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
-        "removeComments": true
+        "removeComments": true,
+        "strict": true
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"],
